--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2018"
 
 [dependencies]
 byteorder = "1.3.4"
+chrono = { version = "0.4.19", optional = true }
 
 [dev-dependencies]
 colfer-build = { path = "colfer-build", version = "0.1.0" }
