--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2018"
 
 [dependencies]
 byteorder = "1.3.4"
+bytes = "1.0.0"
 chrono = { version = "0.4.19", optional = true }
 
 [dev-dependencies]
